[package]
name = "black_hat_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sha1-cracker
sha-1 = "0.10.0"
hex = "0.4.3"
# tricoder
thiserror="1.0.31"
anyhow="1.0.57"
serde = { version = "1.0.139", features = ["derive"] }
#reqwest = {version="0.11", default-features=false, features=["json", "blocking", "rust-tls"]}
#reqwest = {version="0.11", default-features=false, features=["json", "blocking"]} 
reqwest = {version="0.11", features=["blocking", "json"]}
trust-dns-resolver = "0.21.2"
rayon = "1.5.3"
